Fixed error when consuming commands